# digicomm

./: .gitignore  LICENSE  LinearModulator.py  README.md  ber_sim.py  channel_sim.ipynb  constellations.py  derivative_filters.ipynb  digicomm.py  pll.py  pyproject.toml  setup.cfg  synchronization.ipynb
demos/derivative_filter/: derivative_filters.py
demos/pll/: dev_pll.ipynb
src/digicomm/: LinearModulator.py  __init__.py  constellations.py
src/digicomm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
synchronization/: synchronization.py
test/: pulse_sqrt.mat  rcosdesign_test.py
test/LinearModulator/: test_LinearModulator.py
test/digicomm/: fractional_delay.ipynb  pulse_normal.mat  test_derivativeFilter.py  test_fold.py  test_fractionalDelayCoeffs.py  test_zeroInsert.py
test/rcosdesign/: README.md  rcosdesign_test.py
tests/digicomm/: test_addFrequencyOffset.py  test_bitsToSymbols.py  test_noiseVariance.py  test_valleyFill.py  test_zeroInsert.py
tests/other/: README.md  test_calculateBer.py  test_derivativeFilter.py  test_rcosdesign.py
tests/other/LinearModulator/: LinearModulator.py
