[metadata]
name = digicomm
version = 0.0.3
author = Bryan Redd
author_email = bryan.d.redd@gmail.com
description = Tools for digital communications simulations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ae6nr/digicomm
project_urls =
    About Me = https://ae6nr.github.io/
    Bug Tracker = https://github.com/ae6nr/digicomm/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src